<resources>
    <string name="app_name">ServicesExample</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="started_service_fragment_label">Started Service</string>
    <string name="foreground_service_fragment_label">Foreground Service</string>
    <string name="bound_service_fragment_label">Bound Service</string>
    <string name="job_service_fragment_label">Job Service</string>

    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>

    <string name="start_work">Start Work</string>
    <string name="stop_work">Stop Work</string>

    <string name="start_foreground_service">Start Foreground Service</string>
    <string name="stop_foreground_service">Stop Foreground Service</string>

    <string name="previous">Previous</string>

    <string name="started">Started</string>
    <string name="bound">Bound</string>
    <string name="bound_messenger">Bound Messenger</string>
    <string name="bound_aidl">Bound AIDL</string>

    <string name="job">Job</string>

    <string name="title_activity_main_service">Services Example</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Services Example</string>
    <string name="nav_header_subtitle">Cory Roy</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="notification_title">Counting in the background</string>
    <string name="x_count">Count is %1$d</string>
    <string name="foreground">Foreground</string>
    <string name="work">Work</string>
    <string name="work_fragment_label">Work</string>
    <string name="delayed_work_text">Notification will be created, then a 10 second delay before counting, then an end notification will be shown. Work can be stopped at any time.</string>

</resources>