<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/StartedServiceFragment"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/started" />

        <item
            android:id="@+id/BoundServiceFragment"
            android:icon="@android:drawable/ic_menu_mylocation"
            android:title="@string/bound" />

        <item
            android:id="@+id/BoundMessengerServiceFragment"
            android:icon="@android:drawable/ic_menu_upload"
            android:title="@string/bound_messenger" />

        <item
            android:id="@+id/BoundAidlServiceFragment"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/bound_aidl" />

        <item
            android:id="@+id/JobServiceFragment"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/job" />

        <item
            android:id="@+id/StartedForegroundServiceFragment"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/foreground" />

    </group>
</menu>