<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/StartedServiceFragment">

    <fragment
        android:id="@+id/StartedServiceFragment"
        android:name="com.coryroy.servicesexample.StartedServiceFragment"
        android:label="@string/started_service_fragment_label"
        tools:layout="@layout/fragment_started_service"/>

    <fragment
        android:id="@+id/BoundServiceFragment"
        android:name="com.coryroy.servicesexample.BoundServiceFragment"
        android:label="@string/bound_service_fragment_label"
        tools:layout="@layout/fragment_bound_service"/>

    <fragment
        android:id="@+id/JobServiceFragment"
        android:name="com.coryroy.servicesexample.JobServiceFragment"
        android:label="@string/job_service_fragment_label"
        tools:layout="@layout/fragment_job_service"/>

</navigation>