<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewmodel"
            type="com.coryroy.servicesexample.viewmodel.CountingViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.StartedServiceFragment">

    <TextView
        android:id="@+id/textview_count"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/button_start_work"
        android:text="@{String.valueOf(viewmodel.count)}"
        android:textSize="72sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_start_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_work"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textview_delay_text" />

    <TextView
        android:id="@+id/textview_delay_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delayed_work_text"
        android:padding="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_stop_work"/>


    <Button
        android:id="@+id/button_stop_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_work"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="20dp"
 />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>